alignment issues

--- a/Team12_Pitch_In/static/studentProfile.css
+++ b/Team12_Pitch_In/static/studentProfile.css
@@ -17,7 +17,7 @@
 }
 
 h1 {
-	text-align: center;
+	text-align: right;
 }
 .profileDetails {
   text-align: center;
